# CMakeAudioVideo

./: .gitignore  README.md  delete_multiple_directory.py  sh.exe.stackdump
02-CMake/: CMakeLists.txt
04-CMake/: CMakeLists.txt
06-CMake/: CMakeLists.txt  main.cpp  make_off.sh  readme.txt
AudioVideoCode/00_demos/: CMakeLists.txt  build.sh
AudioVideoCode/00_demos/include/: SwitchUint.h  ZArchiver.h
AudioVideoCode/00_demos/resource/: data.txt
AudioVideoCode/00_demos/src/: DemoFile.cpp  Demozlib.cpp
AudioVideoCode/00_demos/src/switch/: DemoSwitchUint.cpp  SwitchUint.cpp
AudioVideoCode/01-android-ndk-archabi-chatgpt/: CMakeLists.txt  array_example.c  build-android-abi.sh  build-android-arch.sh  build-android-archabi.sh  build-armeabi-v7a.sh  build-ndk-chatgpt.sh  build.sh
AudioVideoCode/01-examples/: CMakeLists.txt  build.sh
AudioVideoCode/01_examples/: CMakeLists.txt  build.sh
AudioVideoCode/01_examples/src/: MyArray.cpp
AudioVideoCode/02-rgb-pixel-cpp/: CMakeLists.txt  build.sh  sample.cpp
AudioVideoCode/02-rgb-pixel-cpp/resource/: rainbow-700x700.rgb24  rainbow2-700x700.rgb24
AudioVideoCode/02-rgb-pixel-cpp/src/: Rainbow.cpp
AudioVideoCode/03-rgb-to-bmp/: CMakeLists.txt  build.sh  main.c  save-bmp-test.c
AudioVideoCode/04-rgb-to-bmp-fix/: CMakeLists.txt  build.sh  main.c  rgb-to-bmp-fix-test.c
AudioVideoCode/05-rgb-to-bmp-library/: CMakeLists.txt  build.sh  rgb-to-bmp-with-bmp.c  rgb-to-bmp-with-google-libbmp.c  rgb-to-bmp-with-libbmp.c  rgb-to-bmp-with-qdbmp.c
AudioVideoCode/05-rgb-to-bmp-library-cpp/: 05-rgb-to-bmp-with-bitmap.cpp  05-rgb-to-bmp-with-easybmp.cpp  CMakeLists.txt  EasyBMPsample.cpp  build.sh
AudioVideoCode/05-rgb-to-bmp-library-cpp/EasyBMP/: EasyBMP.cpp  EasyBMP.h  EasyBMP_BMP.h  EasyBMP_DataStructures.h  EasyBMP_VariousBMPutilities.h
AudioVideoCode/05-rgb-to-bmp-library-cpp/bitmap/: bitmap_image.hpp  bitmap_test.cpp
AudioVideoCode/05-rgb-to-bmp-library/bmp/: .gitignore  Makefile  bmp.h  test.c
AudioVideoCode/05-rgb-to-bmp-library/libbmp/: .gitignore  libbmp.c  libbmp.h
AudioVideoCode/05-rgb-to-bmp-library/qdbmp/: license  qdbmp.c  qdbmp.h
AudioVideoCode/06-drawing-time/: CMakeLists.txt  build.sh  common.h  draw-checkerboard.c  draw-frosted-glass-effect.c  draw-gradient.c  draw-julia-set.c  draw-magnifying-glass.c  draw-mandelbrot-set.c  draw-rainbow.c  draw-swirl-effect.c
AudioVideoCode/06-drawing-time-cpp/: CMakeLists.txt  build.sh  draw-archimedean-spirals.cpp  draw-circles-equilateral-riangles.cpp  draw-fireballs.cpp  draw-image-huffle.cpp  draw-maze.cpp  draw-phyllotaxis-spiral.cpp  draw-pointillism-effect.cpp  draw-sierpinski-triangle.cpp
AudioVideoCode/08-rgb-to-yuv/: CMakeLists.txt  bmp_to_rgb_and_yuv.bat  bmp_to_rgb_and_yuv.sh  build.sh  ffmplay_rgb.bat  ffmplay_yuv.bat  rgb24-to-yuv420.c  rgb24-to-yuv444.c  yuv420-to-yuv444.c  yuv444-to-rgb24.c  yuv444-to-yuv420.c
AudioVideoCode/08-rgb-to-yuv-cpp/: CMakeLists.txt  bmp_to_rgb_and_yuv _adv.bat  bmp_to_rgb_and_yuv.sh  bmp_to_rgb_and_yuv_adv.sh  build.sh  ffmplay_rgb.bat  ffmplay_yuv.bat
AudioVideoCode/08-rgb-to-yuv-cpp/include/: RainbowColors.h
AudioVideoCode/08-rgb-to-yuv-cpp/src/: SampleRGB24.cpp  SampleRGB24ToYUV420p.cpp  SampleRGB24ToYUV444p.cpp  SampleRainbowBitmap.cpp  SampleRainbowRGB24.cpp  SampleYUV420pToYUV444p.cpp  SampleYUV444pToRGB24.cpp  SampleYUV444ptoYUV420p.cpp
AudioVideoCode/09-rgb-to-yuv-library/: CMakeLists.txt  bmp_to_rgb_and_yuv.sh  build.sh  ffmplay_rgb.bat  ffmplay_yuv.bat  rgb-to-yuv-with-descampsa-yuv2rgb.c  rgb-to-yuv-with-libyuv.c  rgb-to-yuv-with-libyuv.cpp  yuv-to-rgb-with-descampsa-yuv2rgb.c  yuv-to-rgb-with-libyuv.c  yuv-to-rgb-with-libyuv.cpp
AudioVideoCode/09-rgb-to-yuv-library/resource/: rainbow-rgb24-to-yuv420p-descampsa.yuv  rainbow-yuv420p-to-rgb24-descampsa.rgb  rainbow_711x711_rgb24-to-yuv420p-libyuv.yuv  rainbow_711x711_yuv444p-to-rgb32-libyuv.rgb
AudioVideoCode/10-yuv-conversion-libyuv/: CMakeLists.txt  bmp_to_rgb_and_yuv.sh  build.sh  ffmplay_rgb.bat  ffmplay_yuv.bat  yuv-blend.cpp  yuv-clip.cpp  yuv-mirror.cpp  yuv-rotation.cpp  yuv-scale.cpp
AudioVideoCode/11-rgb-to-png/: CMakeLists.txt  rgb-to-indexed-color-png.c  rgb-to-true-color-png.c  util.c
AudioVideoCode/13-rgb-to-png-library/: CMakeLists.txt  build.sh  rgb-to-png-with-libattopng.c  rgb-to-png-with-libpng.c  rgb-to-png-with-lodepng.c  rgb-to-png-with-svpng.c
AudioVideoCode/15-rgb-to-jpeg/: CMakeLists.txt  build.sh  rgb-to-jpeg.c
AudioVideoCode/15-rgb-to-jpeg/tool/: bitstr.c  bitstr.h  block.c  block.h  color.c  color.h  dct.c  dct.h  huffman.c  huffman.h  log.c  log.h  quant.h  stdefine.h  util.c  zigzag.c  zigzag.h
AudioVideoCode/16-rgb-to-jpeg-library/: CMakeLists.txt  build.sh  ffmplay_rgb.bat  ffmplay_yuv.bat  jpeg-to-rgb.sh  rgb-to-jpeg-with-libjpeg-turbo.c  util.c
AudioVideoCode/16-rgb-to-jpeg-library/jepg-resource/: ffmpeg-libjpeg-turbo-test-image-rgb24.rgb  ffmpeg-libjpeg-turbo-test-image-yuv420p.yuv  ffmpeg-libjpeg-turbo-test-image-yuv444p.yuv  rainbow_711x711_bmp_rgb24.rgb
AudioVideoCode/16-rgb-to-jpeg-library/src/: Libjpeg-turbo-Test.cpp  sample-decode-jpeg.c  sample-encode-jpeg.c  sample-encode2-jpeg.c  sample-encode3-jpeg.c  sample-jpeg-transform.cpp  sample-jpeg2yuv.c  sample-yuv2jpeg.c  test-libjpeg-turbo.cpp  util.c
AudioVideoCode/17-gif-file-analyse/: CMakeLists.txt  build.sh  ffmplay_rgb.bat  gif-file-analyse.c  lzw-compress.c  lzw-compress.h
AudioVideoCode/18-rgb-to-gif/: CMakeLists.txt  build.sh  rgb-to-gif.c
AudioVideoCode/19-rgb-to-gif-library/: CMakeLists.txt  build.sh  ffmplay_rgb.bat  gif-to-rgb-library.c  rgb-to-gif-library.c
AudioVideoCode/20-image-to-gif/: CMakeLists.txt  build.sh  image-to-gif.c
AudioVideoCode/21-gif-decoder-encoder/: CMakeLists.txt  build.sh  ffmplay_rgb.bat  ffmplay_rgb2.bat
AudioVideoCode/21-gif-decoder-encoder/src/: SampleGifDecoder.cpp  SampleGifEncoder.cpp
AudioVideoCode/22-hash-library/: CMakeLists.txt  build.sh
CMakeBase/19-CMake/: CMakeLists.txt  make.sh  make1.sh
CMakeBase/28-CMake/: CMakeLists.txt
CMakeBase/28-CMake/file/: kouyu.txt  kungfu.txt
(+1290 files in other folders)
